--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.2",
-    "react-native-maps": "git+https://git@github.com/react-native-community/react-native-maps.git"
+    "react-native-geocoding": "^0.4.0",
+    "react-native-google-maps-directions": "^2.1.1",
+    "react-native-maps": "git+https://git@github.com/react-native-community/react-native-maps.git",
+    "react-native-maps-directions": "^1.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
